--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-REACT_APP_API=http://192.168.0.105:3000
+# REACT_APP_API=http://192.168.0.105:3000
+REACT_APP_API=https://jsonplaceholder.typicode.com/
